--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="berat_invalid">Berat tidak boleh kosong.</string>
     <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
     <string name="gender_invalid">Pilih jenis kelamin.</string>
+    <string name="berat_badan_kg">Berat Badan (Kg)</string>
+    <string name="tinggi_badan_cm">Tinggi Badan (Cm)</string>
 </resources>
