--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,19 @@
     <string name="ideal">Ideal</string>
     <string name="gemuk">Gemuk</string>
     <string name="kategori">Kategori: %1$s</string>
+    <string name="judul_kurus">Mengatasi Kekurusan</string>
+    <string name="judul_ideal">Menjaga Tetap Ideal</string>
+    <string name="judul_gemuk">Mengatasi Kegemukan</string>
+    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.</string>
+    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
+    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>
     <string name="berat_invalid">Berat tidak boleh kosong.</string>
     <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
     <string name="gender_invalid">Pilih jenis kelamin.</string>
     <string name="berat_badan_kg">Berat Badan (Kg)</string>
     <string name="tinggi_badan_cm">Tinggi Badan (Cm)</string>
+    <string name="lihat_saran">LIHAT SARAN</string>
+    <string name="bagikan">Bagikan</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
