--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="pria">Pria</string>
     <string name="wanita">Wanita</string>
     <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s cm\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
+    <string name="bagikan_saran_template">%1$s kg\n%2$s cm\n%3$s\n\n%4$s\n%5$s</string>
     <string name="hitung">Hitung</string>
     <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/indraazimi/hitung-bmi\n\nCopyright © 2021 Indra Azimi.\nAll rights reserved.</string>
     <string name="hitungBmi">Hitung BMI</string>
@@ -26,6 +27,9 @@
     <string name="berat_invalid">Berat tidak boleh kosong.</string>
     <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
     <string name="gender_invalid">Pilih jenis kelamin.</string>
+    <string name="berat">Berat Badan (Kg): %1$s</string>
+    <string name="tinggi">Tinggi Badan (Cm): %1$s</string>
+    <string name="gender">Tinggi Badan (Cm): %1$s</string>
     <string name="berat_badan_kg">Berat Badan (Kg)</string>
     <string name="tinggi_badan_cm">Tinggi Badan (Cm)</string>
     <string name="lihat_saran">LIHAT SARAN</string>
@@ -33,4 +37,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tentang_aplikasi">Tentang Aplikasi</string>
+    <string name="menu_share">Share</string>
 </resources>
