Menambahkan Update Dan Delete pada History Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
     <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>
     <string name="berat_invalid">Berat tidak boleh kosong.</string>
+    <string name="pilih1">Tulis minimal 1 input.</string>
     <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
     <string name="gender_invalid">Pilih jenis kelamin.</string>
     <string name="berat">Berat Badan (Kg): %1$s</string>
@@ -32,14 +33,26 @@
     <string name="gender">Jenis Kelamin: %1$s</string>
     <string name="hasil_histori">BMI: %1$.2f - %2$s</string>
     <string name="data_histori">BB: %1$.1f - TB: %2$.1f - %3$s</string>
+    <string name="data_berhasil_di_update">Data berhasil di update.</string>
+    <string name="data_berhasil_di_hapus">Data berhasil di hapus.</string>
     <string name="berat_badan_kg">Berat Badan (Kg)</string>
     <string name="tinggi_badan_cm">Tinggi Badan (Cm)</string>
     <string name="lihat_saran">LIHAT SARAN</string>
     <string name="bagikan">Bagikan</string>
+    <string name="konfirmasi_hapus_semua_data">Hapus semua histori?</string>
+    <string name="konfirmasi_hapus_data">Hapus data ini ?</string>
+    <string name="hapus">Hapus</string>
+    <string name="batal">Batal</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tentang_aplikasi">Tentang Aplikasi</string>
     <string name="menu_share">Share</string>
     <string name="belum_ada_data">Belum ada data</string>
     <string name="histori">Histori</string>
+    <string name="hapus_histori">Hapus Histori</string>
+    <string name="data_tidak_ada">Data tidak ada</string>
+    <string name="_8942">⋮</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+    <string name="update_data_bmi">Update data BMI:</string>
 </resources>
