--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s cm\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
     <string name="bagikan_saran_template">%1$s kg\n%2$s cm\n%3$s\n\n%4$s\n%5$s</string>
     <string name="hitung">Hitung</string>
-    <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/indraazimi/hitung-bmi\n\nCopyright © 2021 Indra Azimi.\nAll rights reserved.</string>
+    <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.\n Temukan kodenya di https://github.com/naufalmng/hitungBmi\n\nCopyright © 2021 M Naufal Hanif.\nAll rights reserved.</string>
     <string name="hitungBmi">Hitung BMI</string>
     <string name="bmi">BMI: %1$.2f</string>
     <string name="reset">Reset</string>
